# design-patterns-cpp14

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  FSBAllocator.hh  Jenkinsfile  Makefile  README.md  appveyor.yml  circle.yml  cmaki.yml  common.h  conanfile.py  conanfile.txt  docker-compose.yml  docker_entrypoint.sh  entrypoint.sh  factory.h  memoize.h  package.json  requirements.txt  shippable.yml
cmake/junit/: README.md
docker/: Dockerfile.android-arm64  Dockerfile.linux-x64  Dockerfile.windows-x64
dp14/: memoize.h
dp14/h/: factory.h
include/: factory.h  memoize.h
include/design-patterns/: builder.h  command.h  common.h  factory.h  memoize.h
include/fast-event-system/: fes.h
tests/: CMakeLists.txt  foo.cpp  foo.h  fooA.cpp  fooA.h  fooB.cpp  fooB.h  test_annotations.cpp  test_builder.cpp  test_command.cpp  test_factory.cpp  test_factory_dynamic.cpp  test_factory_linking.cpp  test_factory_static.cpp  test_fes.cpp  test_leader_follower.cpp  test_memoize_dynamic.cpp  test_memoize_static.cpp  test_repository_once_static.cpp  test_repository_static.cpp
